--- a/editdebtordialog.ui
+++ b/editdebtordialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>514</width>
-    <height>744</height>
+    <width>400</width>
+    <height>615</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,7 +56,20 @@
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QTextEdit" name="addressEdit"/>
+    <widget class="QTextEdit" name="addressEdit">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>100</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="label_5">
@@ -86,7 +99,14 @@
     </widget>
    </item>
    <item row="6" column="1">
-    <widget class="QCalendarWidget" name="dateCalendar"/>
+    <widget class="QCalendarWidget" name="dateCalendar">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item row="7" column="0" colspan="2">
     <widget class="QTableWidget" name="tableWidget">
