--- a/edittransactiondialog.ui
+++ b/edittransactiondialog.ui
@@ -38,7 +38,10 @@
    <item row="1" column="1">
     <widget class="QLineEdit" name="nameEdit">
      <property name="enabled">
-      <bool>false</bool>
+      <bool>true</bool>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
