--- a/forms/CreateAgentDialog.ui
+++ b/forms/CreateAgentDialog.ui
@@ -33,7 +33,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="nameEdit"/>
+      <widget class="QLineEdit" name="name_edit"/>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_2">
@@ -50,10 +50,10 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QLineEdit" name="phoneEdit"/>
+      <widget class="QLineEdit" name="phone_edit"/>
      </item>
      <item row="2" column="1">
-      <widget class="QTextEdit" name="addressEdit">
+      <widget class="QTextEdit" name="address_edit">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -87,14 +87,14 @@
     </spacer>
    </item>
    <item row="2" column="1">
-    <widget class="QPushButton" name="saveButton">
+    <widget class="QPushButton" name="save_button">
      <property name="text">
       <string>Save</string>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
-    <widget class="QPushButton" name="clearButton">
+    <widget class="QPushButton" name="clear_button">
      <property name="text">
       <string>Clear</string>
      </property>
@@ -116,18 +116,18 @@
   </layout>
  </widget>
  <tabstops>
-  <tabstop>nameEdit</tabstop>
-  <tabstop>addressEdit</tabstop>
-  <tabstop>phoneEdit</tabstop>
-  <tabstop>saveButton</tabstop>
-  <tabstop>clearButton</tabstop>
+  <tabstop>name_edit</tabstop>
+  <tabstop>address_edit</tabstop>
+  <tabstop>phone_edit</tabstop>
+  <tabstop>save_button</tabstop>
+  <tabstop>clear_button</tabstop>
  </tabstops>
  <resources/>
  <connections>
   <connection>
-   <sender>clearButton</sender>
+   <sender>clear_button</sender>
    <signal>clicked()</signal>
-   <receiver>phoneEdit</receiver>
+   <receiver>phone_edit</receiver>
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -141,9 +141,9 @@
    </hints>
   </connection>
   <connection>
-   <sender>clearButton</sender>
+   <sender>clear_button</sender>
    <signal>clicked()</signal>
-   <receiver>addressEdit</receiver>
+   <receiver>address_edit</receiver>
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -157,9 +157,9 @@
    </hints>
   </connection>
   <connection>
-   <sender>clearButton</sender>
+   <sender>clear_button</sender>
    <signal>clicked()</signal>
-   <receiver>nameEdit</receiver>
+   <receiver>name_edit</receiver>
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
