--- a/forms/DaybookAgentDialog.ui
+++ b/forms/DaybookAgentDialog.ui
@@ -22,7 +22,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QComboBox" name="agentCombo">
+    <widget class="QComboBox" name="agent_combo">
      <property name="currentIndex">
       <number>-1</number>
      </property>
@@ -36,7 +36,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QLineEdit" name="totalAmountEdit">
+    <widget class="QLineEdit" name="total_amount_edit">
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -50,7 +50,7 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QLineEdit" name="totalPaidEdit">
+    <widget class="QLineEdit" name="total_paid_edit">
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -64,14 +64,14 @@
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QLineEdit" name="totalBalanceEdit">
+    <widget class="QLineEdit" name="total_balance_edit">
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="4" column="0" colspan="2">
-    <widget class="QTableWidget" name="tableWidget">
+    <widget class="QTableWidget" name="table_widget">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
