--- a/forms/DaybookAgentDialog.ui
+++ b/forms/DaybookAgentDialog.ui
@@ -37,6 +37,9 @@
    </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="total_amount_edit">
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -51,6 +54,9 @@
    </item>
    <item row="2" column="1">
     <widget class="QLineEdit" name="total_paid_edit">
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -65,6 +71,9 @@
    </item>
    <item row="3" column="1">
     <widget class="QLineEdit" name="total_balance_edit">
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
