--- a/forms/DebtorTransactionsDialog.ui
+++ b/forms/DebtorTransactionsDialog.ui
@@ -160,7 +160,7 @@
      <item>
       <widget class="QPushButton" name="clear_button">
        <property name="text">
-        <string>Clear</string>
+        <string>&amp;Clear</string>
        </property>
       </widget>
      </item>
