--- a/forms/CreateAgentDialog.ui
+++ b/forms/CreateAgentDialog.ui
@@ -89,14 +89,14 @@
    <item row="2" column="1">
     <widget class="QPushButton" name="save_button">
      <property name="text">
-      <string>Save</string>
+      <string>&amp;Save</string>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
     <widget class="QPushButton" name="clear_button">
      <property name="text">
-      <string>Clear</string>
+      <string>&amp;Clear</string>
      </property>
     </widget>
    </item>
