--- a/forms/EditAgentDialog.ui
+++ b/forms/EditAgentDialog.ui
@@ -35,6 +35,16 @@
          </property>
         </widget>
        </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Phone</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLineEdit" name="phoneEdit"/>
+       </item>
        <item row="1" column="1">
         <widget class="QTextEdit" name="addressEdit">
          <property name="sizePolicy">
@@ -53,16 +63,6 @@
           <bool>true</bool>
          </property>
         </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Phone</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLineEdit" name="phoneEdit"/>
        </item>
       </layout>
      </item>
@@ -135,14 +135,14 @@
        <item>
         <widget class="QPushButton" name="saveButton">
          <property name="text">
-          <string>Save</string>
+          <string>&amp;Save</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="clearButton">
          <property name="text">
-          <string>Clear</string>
+          <string>&amp;Clear</string>
          </property>
         </widget>
        </item>
