--- a/forms/CreateAgentDialog.ui
+++ b/forms/CreateAgentDialog.ui
@@ -33,7 +33,11 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="name_edit"/>
+      <widget class="QLineEdit" name="name_edit">
+       <property name="inputMask">
+        <string/>
+       </property>
+      </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_2">
