--- a/forms/CreateDebtorDialog.ui
+++ b/forms/CreateDebtorDialog.ui
@@ -23,6 +23,9 @@
    </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="serial_edit">
+     <property name="inputMask">
+      <string>9999; </string>
+     </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
