--- a/forms/DaybookBalanceDialog.ui
+++ b/forms/DaybookBalanceDialog.ui
@@ -57,6 +57,9 @@
    </item>
    <item row="2" column="1">
     <widget class="QLineEdit" name="total_balance_edit">
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
