--- a/forms/DaybookBalanceDialog.ui
+++ b/forms/DaybookBalanceDialog.ui
@@ -85,12 +85,20 @@
        <property name="text">
         <string>&amp;List</string>
        </property>
+       <property name="icon">
+        <iconset resource="../res/dailycollection.qrc">
+         <normaloff>:/Document.png</normaloff>:/Document.png</iconset>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="open_report_in_browser">
        <property name="text">
         <string>&amp;Open report in browser</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../res/dailycollection.qrc">
+         <normaloff>:/Web-page.png</normaloff>:/Web-page.png</iconset>
        </property>
       </widget>
      </item>
@@ -135,6 +143,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../res/dailycollection.qrc"/>
+ </resources>
  <connections/>
 </ui>
