--- a/forms/DebtorTransactionsDialog.ui
+++ b/forms/DebtorTransactionsDialog.ui
@@ -165,12 +165,18 @@
        <property name="text">
         <string>&amp;Clear</string>
        </property>
+       <property name="icon">
+        <iconset resource="../res/dailycollection.qrc">
+         <normaloff>:/Subtract.png</normaloff>:/Subtract.png</iconset>
+       </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../res/dailycollection.qrc"/>
+ </resources>
  <connections/>
 </ui>
