--- a/forms/DebtorInstallmentDialog.ui
+++ b/forms/DebtorInstallmentDialog.ui
@@ -136,12 +136,20 @@
        <property name="text">
         <string>&amp;Save</string>
        </property>
+       <property name="icon">
+        <iconset resource="../res/dailycollection.qrc">
+         <normaloff>:/Add.png</normaloff>:/Add.png</iconset>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="clear_button">
        <property name="text">
         <string>&amp;Clear</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../res/dailycollection.qrc">
+         <normaloff>:/Subtract.png</normaloff>:/Subtract.png</iconset>
        </property>
       </widget>
      </item>
@@ -160,6 +168,8 @@
   <tabstop>save_button</tabstop>
   <tabstop>clear_button</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../res/dailycollection.qrc"/>
+ </resources>
  <connections/>
 </ui>
