--- a/forms/EditAgentDialog.ui
+++ b/forms/EditAgentDialog.ui
@@ -137,12 +137,20 @@
          <property name="text">
           <string>&amp;Save</string>
          </property>
+         <property name="icon">
+          <iconset resource="../res/dailycollection.qrc">
+           <normaloff>:/Add.png</normaloff>:/Add.png</iconset>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="clearButton">
          <property name="text">
           <string>&amp;Clear</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../res/dailycollection.qrc">
+           <normaloff>:/Subtract.png</normaloff>:/Subtract.png</iconset>
          </property>
         </widget>
        </item>
@@ -152,7 +160,9 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../res/dailycollection.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>clearButton</sender>
