--- a/forms/DailyCollectionWindow.ui
+++ b/forms/DailyCollectionWindow.ui
@@ -40,7 +40,7 @@
      <x>0</x>
      <y>0</y>
      <width>560</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_Daily_Collection">
@@ -51,6 +51,8 @@
     <addaction name="separator"/>
     <addaction name="action_Backup"/>
     <addaction name="action_Restore"/>
+    <addaction name="separator"/>
+    <addaction name="action_Settings"/>
     <addaction name="separator"/>
     <addaction name="action_Exit"/>
    </widget>
@@ -257,6 +259,11 @@
    </property>
    <property name="shortcut">
     <string>Alt+Shift+Left</string>
+   </property>
+  </action>
+  <action name="action_Settings">
+   <property name="text">
+    <string>&amp;Settings</string>
    </property>
   </action>
  </widget>
