--- a/forms/EditDebtorDialog.ui
+++ b/forms/EditDebtorDialog.ui
@@ -82,7 +82,11 @@
     </widget>
    </item>
    <item row="4" column="1">
-    <widget class="QLineEdit" name="amountEdit"/>
+    <widget class="QLineEdit" name="amountEdit">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </item>
    <item row="5" column="0">
     <widget class="QLabel" name="label_6">
@@ -193,12 +197,20 @@
        <property name="text">
         <string>&amp;Save</string>
        </property>
+       <property name="icon">
+        <iconset resource="../res/dailycollection.qrc">
+         <normaloff>:/Add.png</normaloff>:/Add.png</iconset>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="clearButton">
        <property name="text">
         <string>&amp;Clear</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../res/dailycollection.qrc">
+         <normaloff>:/Subtract.png</normaloff>:/Subtract.png</iconset>
        </property>
       </widget>
      </item>
@@ -207,12 +219,18 @@
        <property name="text">
         <string>&amp;Delete</string>
        </property>
+       <property name="icon">
+        <iconset resource="../res/dailycollection.qrc">
+         <normaloff>:/Exit.png</normaloff>:/Exit.png</iconset>
+       </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../res/dailycollection.qrc"/>
+ </resources>
  <connections/>
 </ui>
