--- a/forms/CreateAgentDialog.ui
+++ b/forms/CreateAgentDialog.ui
@@ -186,5 +186,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>clear_button</sender>
+   <signal>clicked()</signal>
+   <receiver>name_edit</receiver>
+   <slot>setFocus()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>452</x>
+     <y>224</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>277</x>
+     <y>18</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
